# futbol-haber-botu

./: .env.example  .gitignore  README.md  create_github_repo.py  github_setup_guide.md  pyproject.toml  test_keys.sh
.github/workflows/: bot.yml
.windsurf/rules/: xbotrules.md
app/: auto_runner.py  config.py  main.py  pipeline.py
app/classify/: rumor_official.py
app/connectors/: rss.py  social.py  twitter.py  twitter_lite.py  websites.py
app/extractors/: article.py  entity_extractor.py  og.py
app/filters/: turkish_relevance.py
app/hashtags/: dynamic_hashtags.py
app/images/: card.py  openverse.py  smart_image_selector.py
app/processors/: tweet_processor.py
app/publisher/: console_publisher.py  formatter.py  x_client.py
app/scheduler/: __init__.py  continuous_runner.py
app/summarize/: lexrank_tr.py  templates_tr.py
app/translate/: translator.py
app/utils/: dedupe.py  hashing.py  logging.py  text.py  time.py
data/: sources.yaml  stopwords_tr.txt
temp/: .gitkeep
tests/: test_pipeline.py
