[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "futbot"
version = "0.1.0"
description = "Automated Turkish football news bot for X/Twitter"
authors = [{name = "Football Bot", email = "bot@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
    "tweepy>=4.14.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.3",
    "typer[all]>=0.9.0",
    "rich>=13.6.0",
    "nltk>=3.8.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "PyYAML>=6.0.1",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "schedule>=1.2.0",
    "trafilatura>=1.6.0",
    "readability-lxml>=0.8.1",
    "sumy>=0.11.0",
    "langdetect>=1.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6"
]

[project.scripts]
futbot = "app.main:app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
